<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Recipes</string>
    <string name="action_settings">Settings</string>
    <string name="view_as_grid">View as grid</string>
    <string name="view_as_list">View as list</string>
    <string name="load_more">Load more</string>
    <string name="sort_rate">Sort by rating</string>
    <string name="sort_trend">Sort by trendingness</string>
    <string name="search">Search</string>
    <string name="publisher">Publisher:</string>
    <string name="source">Source:</string>
    <string name="rate">Rate:</string>
    <string name="f2f">Food2fork:</string>

</resources>
