<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />


    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always"/>

    <item android:id="@+id/view_grid"
        android:title="@string/view_as_grid"
        android:icon="@drawable/ic_action_view_as_grid"
        android:showAsAction="always"/>

    <item android:id="@+id/view_list"
        android:title="@string/view_as_list"
        android:icon="@drawable/ic_action_view_as_list"
        android:showAsAction="always"/>

    <item android:id="@+id/sort_rate"
        android:title="@string/sort_rate"
        android:showAsAction="never"/>

    <item android:id="@+id/sort_trend"
        android:title="@string/sort_trend"
        android:showAsAction="never"/>

</menu>
